--- a/Design/pages/Goal details.html
+++ b/Design/pages/Goal details.html
@@ -12,69 +12,100 @@
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
 
 
-    <script src="design.js"></script>
+
+    <link rel="stylesheet" href="../source/design.css"></link>
     <title>Goal Details</title>
 
 </head>
 
 <body>
+    <!--Navbar start-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+
                 <span class="navbar-toggler-icon"></span>
+
             </button>
+
             <div class="collapse navbar-collapse" id="navbarText">
+
                 <div class="row w-100">
-                    <div class="col-md-8 ">
+
+                    <div class="col-md-8">
+
                         <ul class="navbar-nav">
+
                             <li class="nav-item active">
+
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Home.html">Home</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./food.html">Food</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
                         </ul>
-
                     </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-4 text-right">
+
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                                 <b>Atif Mehmood</b>
+
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+
                                 <a class="dropdown-item" href="./Landing.html">Logout</a>
+
                                 <a class="dropdown-item" href="./profile.html">Profile</a>
+
                             </div>
+
                         </div>
 
+
+
                     </div>
+
                 </div>
+
             </div>
+
         </div>
+
     </nav>
+    <!--Navbar end-->
 
     <section class="container">
         <div class="row p-3">
             <div class="col-lg-12 text-center">
                 <h2>Goal Details</h2>
             </div>
-            <div class="dropdown">
-                <input type="search" id="searchBar" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div class="dropdown-menu" aria-labelledby="searchBar">
-
-                </div>
-            </div>
+            
 
 
         </div>
@@ -108,12 +139,10 @@
                 </div>
                 <form action="">
                     <div class="form-inline pt-4">
-                        <lable class="lable mr-1">Weight</lable>
-                        <input type="number" class="form-control mr-1">
-                        <button class="btn btnn-primary text-white">Log</button>
+                        <lable class="lable mr-1 ">Weight</lable>
+                        <input type="number" class="form-control mr-1 mb-1">
+                        <button class="btn btnn-primary text-white ">Log</button>
                     </div>
-
-
                 </form>
             </div>
             <div class="col-lg-8 text-center">Graph goes here</div>
