--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -15,128 +15,16 @@
 </head>
 
 <body>
-        <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content container-fluid">
-                <!--Header-->
-                <div class="modal-header">
-                    <h4 class="modal-title " id="myModalLabel ">Add Exercise</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <!--button group-->
-                <div class="col-md-12 text-center">
-                    <div class="btn-group p-2" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btnn-primary btn-group-sm">My Exercises</button>
-                        <button type="button" class="btn btnn-primary">All Exercises</button>
-                    </div>
-                </div>
-
-                <div class="input-group main rounded-pill">
-                    <input type="search" class="form-control" placeholder="Search Exercise">
-                    <div class="input-group-append">
-                        <button class="btn btnn-primary " type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-                <!--body-->
-                <div class="modal-body">
-
-                    <table class="table-sm table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Exercise Name</th>
-                                <th>Duration</th>
-                                <th>Calories Burned</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Exercise 1</td>
-                                <td>
-                                    <form>
-                                        <div class="form-row col-xs-1">
-                                            <input class="form-control" type="number" placeholder="Duration"
-                                                aria-label="Time">
-                                        </div>
-                                    </form>
-                                </td>
-                                <td class="text-center">12</td>
-                                <td><a><i class="fas fa-times"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Exercise 2</td>
-                                <td>
-                                    <form>
-                                        <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration"
-                                                aria-label="Time">
-                                        </div>
-                                    </form>
-                                </td>
-                                <td class="text-center">12</td>
-                                <td><a><i class="fas fa-times"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Exercise 3</td>
-                                <td>
-                                    <form>
-                                        <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration"
-                                                aria-label="fa-times">
-                                        </div>
-                                    </form>
-                                </td>
-                                <td class="text-center">12</td>
-                                <td><a><i class="fas fa-times"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Exercise 4</td>
-                                <td>
-                                    <form>
-                                        <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration"
-                                                aria-label="Time">
-                                        </div>
-                                    </form>
-                                </td>
-                                <td class="text-center">12</td>
-                                <td><a><i class="fas fa-times"></i></a></td>
-                            </tr>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h5 class="text-center">Total Calories burned: 1102</h5>
-                </div>
-
-
-
-
-                <!--Footer-->
-                <div class="modal-footer">
-
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button class="btn btnn-primary">Add</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--Navbar start-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
         <div class="container">
+            <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 
-            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;
-                                font-size: 2rem"><b>U</b></span>fit.</span>
+                <span class="navbar-toggler-icon"></span>
 
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        
-                            <span class="navbar-toggler-icon"></span>
-        
-                        </button>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarText">
 
@@ -162,6 +50,7 @@
                             </li>
 
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./food.html">Food</a>
                             </li>
 
@@ -176,14 +65,15 @@
 
                         <div class="nav-item dropdown">
 
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
                                 <b>Atif Mehmood</b>
 
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
 
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 
                                 <a class="dropdown-item" href="./Landing.html">Logout</a>
 
@@ -204,6 +94,7 @@
         </div>
 
     </nav>
+    <!--Navbar end-->
     <section class="container mb-2">
         <div class='row pt-4 text-center'>
             <div class="col-lg-12">
