overlay opacity reduced

--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -131,7 +131,7 @@
                                         alt="">
                                     <div class="d-block w-100 p-5 text-white">
                                         <i class="fa fa-quote-left fa-2x pr-2"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit., maiores illo reprehenderit, fugit quae velit, perspiciatis delectus dicta dolorem modi culpa! Veniam exercitationem
-                                        est debitis sint, iste nihil vitae<i class="fa fa-quote-right fa-2x pl-2"></i>
+                                        est debitis sinte<i class="fa fa-quote-right fa-2x pl-2"></i>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +286,7 @@
                             <div class="input-group mb-3">
                                 <input type="password" name="password-2" class="form-control" placeholder="confirm password" aria-label="password" aria-describedby="basic-addon1">
                             </div>
-                            <a type="button" href="./profile.html" class="btn btnn-primary text-white btn-block">signup</a>
+                            <a type="button" href="./profile.html" class="btn btnn-primary text-white btn-block">Signup</a>
 
                         </div>
                     </form>
