--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
 
@@ -139,7 +140,8 @@
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse">
-                    <button class="btn btnn-primary text-white " data-toggle="modal" data-target="#log-exercise">Add Exercise</button>
+                    <button class="btn btnn-primary text-white " data-toggle="modal" data-target="#log-exercise">Add
+                        Exercise</button>
                 </div>
 
             </div>
@@ -166,7 +168,7 @@
                     <div class="footer-item">
                         <i class="fa fa-sign-in" aria-hidden="true"></i>
                         <a href="./Landing.html" class="text-white ml-3">
-                                        Logout</a>
+                            Logout</a>
                     </div>
 
                     <div class="text-right">
@@ -186,8 +188,126 @@
             </div>
 
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+
+        <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content container-fluid">
+                <!--Header-->
+                <div class="modal-header">
+                    <h4 class="modal-title " id="myModalLabel ">Add Exercise</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <!--button group-->
+                <div class="col-md-12 text-center">
+                    <div class="btn-group p-2" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btnn-primary btn-group-sm">My Exercises</button>
+                        <button type="button" class="btn btnn-primary">All Exercises</button>
+                    </div>
+                </div>
+
+                <div class="input-group main rounded-pill">
+                    <input type="search" class="form-control" placeholder="Search Exercise">
+                    <div class="input-group-append">
+                        <button class="btn btnn-primary " type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+                <!--body-->
+                <div class="modal-body">
+
+                    <table class="table-sm table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Exercise Name</th>
+                                <th>Duration</th>
+                                <th>Calories Burned</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Exercise 1</td>
+                                <td>
+                                    <form>
+                                        <div class="form-row col-xs-1">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
+                                        </div>
+                                    </form>
+                                </td>
+                                <td class="text-center">12</td>
+                                <td><a><i class="fas fa-times"></i></a></td>
+                            </tr>
+                            <tr>
+                                <td>Exercise 2</td>
+                                <td>
+                                    <form>
+                                        <div class="form-row col-xs-2">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
+                                        </div>
+                                    </form>
+                                </td>
+                                <td class="text-center">12</td>
+                                <td><a><i class="fas fa-times"></i></a></td>
+                            </tr>
+                            <tr>
+                                <td>Exercise 3</td>
+                                <td>
+                                    <form>
+                                        <div class="form-row col-xs-2">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="fa-times">
+                                        </div>
+                                    </form>
+                                </td>
+                                <td class="text-center">12</td>
+                                <td><a><i class="fas fa-times"></i></a></td>
+                            </tr>
+                            <tr>
+                                <td>Exercise 4</td>
+                                <td>
+                                    <form>
+                                        <div class="form-row col-xs-2">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
+                                        </div>
+                                    </form>
+                                </td>
+                                <td class="text-center">12</td>
+                                <td><a><i class="fas fa-times"></i></a></td>
+                            </tr>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h5 class="text-center">Total Calories burned: 1102</h5>
+                </div>
+
+
+
+
+                <!--Footer-->
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button class="btn btnn-primary">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
