--- a/Design/pages/food.html
+++ b/Design/pages/food.html
@@ -185,8 +185,11 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-sm btnn-primary text-white mb-2" data-toggle="modal"
-                    data-target="#addFoodModal" value="LOG FOOD" button-position="center">LOG FOOD</button>
+                <div class="d-flex flex-row-reverse">
+                        <button type="button" class="btn btn-sm btnn-primary text-white mb-2" data-toggle="modal"
+                        data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
+                </div>
+                
 
             </div>
         </div>
@@ -290,7 +293,7 @@
                 </div>
                 <!--Footer-->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-dark btn-sm" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
                     <button class="btn btnn-primary btn-sm ">Add</button>
                 </div>
             </div>
