--- a/Design/pages/Goals.html
+++ b/Design/pages/Goals.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
 
-    <script src="design.js"></script>
     <title>Goals</title>
 
 </head>
@@ -359,7 +358,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Edit Goal</h4>
+                            <h4 class="modal-title text-dark">Edit Goal</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -368,13 +367,13 @@
                             <div class="container-fluid">
                                 <form>
                                     <div class="form-group row">
-                                        <label class="col-form-label">Goal Weight (lbs)</label>
+                                        <label class="col-form-label text-dark">Goal Weight (lbs)</label>
                                         <div class="col-lg-8">
                                             <input type="number" class="form-control" value=96>
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-form-label">Date of Completion</label>
+                                        <label class="col-form-label text-dark">Date of Completion</label>
                                         <div class="col-lg-8">
                                             <input type="date" class="form-control">
                                         </div>
