--- a/Design/pages/Goals.html
+++ b/Design/pages/Goals.html
@@ -131,7 +131,7 @@
                         </tr>
                     </table>
                     <div class="d-flex">
-                        <button class="btn btnn-primary" data-toggle="modal" data-target="#editGoalModal">Add Goal</button>
+                        <button class="btn btnn-primary" data-toggle="modal" data-target="#addGoalModal">Add Goal</button>
                         <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal" data-target="#editGoalModal">Edit Goal</button>
                     </div>
                 </div>
@@ -388,6 +388,40 @@
                     </div>
                 </div>
             </section>
+            <section class="modal fade" id="addGoalModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title text-dark">Add Goal</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="container-fluid">
+                                    <form>
+                                        <div class="form-group row">
+                                            <label class="col-form-label text-dark">Goal Weight (lbs)</label>
+                                            <div class="col-lg-8">
+                                                <input type="number" class="form-control" value=96>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-form-label text-dark">Date of Completion</label>
+                                            <div class="col-lg-8">
+                                                <input type="date" class="form-control">
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btnn-primary">Add Goal</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
 
     </footer>
