fixed links from home

--- a/Design/pages/food.html
+++ b/Design/pages/food.html
@@ -186,7 +186,7 @@
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse">
-                        <button type="button" class="btn btn-sm btnn-primary text-white mb-2" data-toggle="modal"
+                        <button type="button" class="btn  btnn-primary text-white mb-2" data-toggle="modal"
                         data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
                 </div>
                 
