--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
 
@@ -29,7 +30,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 
                 <span class="navbar-toggler-icon"></span>
 
@@ -74,7 +76,8 @@
 
                         <div class="nav-item dropdown">
 
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
                                 <b>Atif Mehmood</b>
 
@@ -136,123 +139,126 @@
 
             <div class="row pt-2 pb-2">
                 <div class="col-sm-12 col-md-6  pt-2">
-                    <a href="food.html">
-                        <div class="card card-body">
+
+                    <div class="card card-body">
+                        <a href="food.html">
                             <h3 class="card-title text-center text-dark">Today's Intake</h3>
-                            <hr>
-                            <table class="table table-sm table-responsive-sm">
-                                <thead class="labels text-white">
+                        </a>
+                        <hr>
+                        <table class="table table-sm table-responsive-sm">
+                            <thead class="labels text-white">
+                                <tr>
+                                    <th>Food</th>
+                                    <th>Quantity</th>
+                                    <th>Calories</th>
+                                    <th>Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <thead class="log-thead">
                                     <tr>
-                                        <th>Food</th>
-                                        <th>Quantity</th>
-                                        <th>Calories</th>
-                                        <th>Delete</th>
+                                        <th colspan="4" class="">Breakfast</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <thead class="log-thead">
-                                        <tr>
-                                            <th colspan="4" class="">Breakfast</th>
-                                        </tr>
-                                    </thead>
+                                <tr>
+                                    <td>Food 1 </td>
+                                    <td>6</td>
+                                    <td>120</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2 text-center"></p>
+                                    </td>
+                                </tr>
+
+
+                                <thead class="log-thead">
                                     <tr>
-                                        <td>Food 1 </td>
-                                        <td>6</td>
-                                        <td>120</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2 text-center"></p>
-                                        </td>
+                                        <th colspan="4" class="">Lunch</th>
                                     </tr>
+                                </thead>
+                                <tr>
+                                    <td>Food 2</td>
+                                    <td>7.5</td>
+                                    <td>335</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2 text-center"></p>
+                                    </td>
+                                </tr>
 
-
-                                    <thead class="log-thead">
-                                        <tr>
-                                            <th colspan="4" class="">Lunch</th>
-                                        </tr>
-                                    </thead>
+                                <thead class="log-thead">
                                     <tr>
-                                        <td>Food 2</td>
-                                        <td>7.5</td>
-                                        <td>335</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2 text-center"></p>
-                                        </td>
+                                        <th colspan="4" class="">Dinner</th>
                                     </tr>
+                                </thead>
 
-                                    <thead class="log-thead">
-                                        <tr>
-                                            <th colspan="4" class="">Dinner</th>
-                                        </tr>
-                                    </thead>
-
-                                    <tr>
-                                        <td>Food 3</td>
-                                        <td>1.5</td>
-                                        <td>475</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2 text-center"></p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <button type="button" class="btn btn-sm btnn-primary text-white" data-toggle="modal"
-                                data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
-                        </div>
-                    </a>
+                                <tr>
+                                    <td>Food 3</td>
+                                    <td>1.5</td>
+                                    <td>475</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2 text-center"></p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <button type="button" class="btn btn-sm btnn-primary text-white" data-toggle="modal"
+                            data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
+                    </div>
                 </div>
                 <div class="col-md-6 pt-2">
-                    <a href="exercise.html">
-                        <div class="card card-body">
+                    <div class="card card-body">
+                        <a href="exercise.html">
+
                             <h3 class="card-title text-center text-dark">Today's Exercise</h3>
-                            <hr>
-                            <table class="table table-sm table-responsive-sm">
-                                <thead class="labels text-white">
-                                    <tr>
-                                        <th>Exercise</th>
-                                        <th>Time</th>
-                                        <th class="text-center">Calories Burned</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr scope="row">
-                                        <td>push-ups</td>
-                                        <td>15</td>
-                                        <td class="text-center"> 255</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2 text-center"></p>
-                                        </td>
+                        </a>
+                        <hr>
+                        <table class="table table-sm table-responsive-sm">
+                            <thead class="labels text-white">
+                                <tr>
+                                    <th>Exercise</th>
+                                    <th>Time</th>
+                                    <th class="text-center">Calories Burned</th>
+                                    <th>Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr scope="row">
+                                    <td>push-ups</td>
+                                    <td>15</td>
+                                    <td class="text-center"> 255</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2 text-center"></p>
+                                    </td>
 
-                                    </tr>
-                                    <tr>
-                                        <td>running</td>
-                                        <td>15</td>
-                                        <td class="text-center"> 255</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2"></p>
-                                        </td>
+                                </tr>
+                                <tr>
+                                    <td>running</td>
+                                    <td>15</td>
+                                    <td class="text-center"> 255</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2"></p>
+                                    </td>
 
-                                    </tr>
-                                    <tr>
-                                        <td>jumping</td>
-                                        <td>15</td>
-                                        <td class="text-center"> 255</td>
-                                        <td class="text-center">
-                                            <p class="fa fa-trash-o pr-2"></p>
-                                        </td>
+                                </tr>
+                                <tr>
+                                    <td>jumping</td>
+                                    <td>15</td>
+                                    <td class="text-center"> 255</td>
+                                    <td class="text-center">
+                                        <p class="fa fa-trash-o pr-2"></p>
+                                    </td>
 
 
-                                    </tr>
+                                </tr>
 
-                                </tbody>
-                            </table>
-                            <div class="d-flex flex-row-reverse">
-                                <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD"
-                                    data-toggle="modal" data-target="#log-exercise">Log Exercise</button>
+                            </tbody>
+                        </table>
+                        <div class="d-flex flex-row-reverse">
+                            <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD"
+                                data-toggle="modal" data-target="#log-exercise">Log Exercise</button>
 
-                            </div>
                         </div>
-                    </a>
+                    </div>
+
                 </div>
             </div>
     </section>
@@ -322,7 +328,8 @@
     <!--Footer end-->
 
     <!--Log Exercise Modal start-->
-    <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content container-fluid">
                 <!--Header-->
@@ -365,7 +372,8 @@
                                 <td>
                                     <form>
                                         <div class="form-row col-xs-1">
-                                            <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
                                         </div>
                                     </form>
                                 </td>
@@ -377,7 +385,8 @@
                                 <td>
                                     <form>
                                         <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
                                         </div>
                                     </form>
                                 </td>
@@ -389,7 +398,8 @@
                                 <td>
                                     <form>
                                         <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration" aria-label="fa-times">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="fa-times">
                                         </div>
                                     </form>
                                 </td>
@@ -401,7 +411,8 @@
                                 <td>
                                     <form>
                                         <div class="form-row col-xs-2">
-                                            <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                            <input class="form-control" type="number" placeholder="Duration"
+                                                aria-label="Time">
                                         </div>
                                     </form>
                                 </td>
@@ -429,7 +440,8 @@
     <!--Log Exercise Modal end-->
 
     <!-- Modal: Add Food -->
-    <div class="modal fade" id="addFoodModal" tabindex="-1" role="dialog" aria-labelledby="addFoodModal" aria-hidden="true">
+    <div class="modal fade" id="addFoodModal" tabindex="-1" role="dialog" aria-labelledby="addFoodModal"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <!--Header-->
@@ -459,8 +471,11 @@
 
                     </div>
                     <div class="dropdown search">
-                        <input type="search" id="searchBar" placeholder="search food" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="dropdown-menu" id="search-dropdown-menu" aria-labelledby="searchBar" style="max-height: 400px;overflow-y: scroll;width:100%">
+                        <input type="search" id="searchBar" placeholder="search food"
+                            class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                        <div class="dropdown-menu" id="search-dropdown-menu" aria-labelledby="searchBar"
+                            style="max-height: 400px;overflow-y: scroll;width:100%">
 
                         </div>
                     </div>
@@ -493,9 +508,14 @@
 
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script src="../source/loggers.js"></script>
 
 </body>
