--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -140,7 +140,7 @@
                                             </div>
                                       </div>
                                       <div class="carousel-item p-5">
-                                            <img class="img-thumbnail" src="https://avatars1.githubusercontent.com/u/35393156?s=460&v=4"alt="">
+                                            <img class="img-thumbnail" src="https://scontent.fkhi11-1.fna.fbcdn.net/v/t1.0-9/28472293_874478222723019_3034332901174313229_n.jpg?_nc_cat=104&_nc_oc=AQnHOd2AfTGFCFIY5lc4z-NjCO8DLlq37lwqECc9sKuTX5zfwU74vcu57RQ_Zrr5S24&_nc_ht=scontent.fkhi11-1.fna&oh=90532bf6977bcfc292e3877d48d75e72&oe=5DA811F4"alt="">
                                             <div class="d-block w-100 p-5 text-white">
                                                 <i class="fa fa-quote-left fa-2x pr-2"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit., maiores illo reprehenderit, fugit quae velit, perspiciatis delectus dicta dolorem modi culpa! Veniam exercitationem
                                                 est debitis sinte<i class="fa fa-quote-right fa-2x pl-2"></i>
