Summary EndPoints added

--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -263,7 +263,7 @@
 
                             <input type="password" class="form-control" placeholder="password" aria-label="password" aria-describedby="basic-addon1">
                         </div>
-                        <a type="button" href="./Home.html" class="btn btnn-primary text-white btn-block">Login</a>
+                        <a type="button" href="./Home.html?id=1" class="btn btnn-primary text-white btn-block">Login</a>
                         <div class="row pt-2">
                             <div class="col-md-6"><a href="">Creat new account</a></div>
                             <div class="col-md-6 text-right"><a href="">Forgot your password?</a></div>
