food endpoints seperated

--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -545,6 +545,17 @@
         })
     })
 
+    $(function(){
+        // get data from server url: localhost:8000/food-log/2019-07-16
+        
+
+
+
+
+
+
+    })
+
 
 </script>
 </html>
